--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>kakaomap</title>
   </head>
   <body>
-    <div id="map">hello</div>
+    <div id="map" style="width: 500px; height: 400px"></div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
+    <script>
+      var container = document.getElementById("map");
+      var options = {
+        center: new kakao.maps.LatLng(33.450701, 126.570667),
+        level: 3,
+      };
+
+      var map = new kakao.maps.Map(container, options);
+    </script>
   </body>
 </html>
