--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>kakaomap</title>
+    <link rel="stylesheet" href="../common/style/minireset.min.css" />
   </head>
   <body>
-    <div id="map" style="width: 500px; height: 400px"></div>
+    <div id="map" style="width: 100%; height: 100vh"></div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1&libraries=services,clusterer,drawing"></script>
     <script>
       var container = document.getElementById("map");
       var options = {
