--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="map" style="width: 100%; height: 100vh"></div>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1&libraries=services,clusterer,drawing"></script>
     <script>
       // 가정: 주소 불러오기 완료
@@ -22,20 +21,20 @@
         // 변환 성공시
         if (status === kakao.maps.services.Status.OK) {
           const coordinates = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+          var container = document.getElementById("map");
+          var options = {
+            center: coordinates,
+            level: 3,
+          };
+
+          var map = new kakao.maps.Map(container, options);
+
+          const marker = new kakao.maps.Marker({
+            position: coordinates,
+            map: map,
+          });
         }
-      });
-
-      var container = document.getElementById("map");
-      var options = {
-        center: new kakao.maps.LatLng(33.450701, 126.570667),
-        level: 3,
-      };
-
-      var map = new kakao.maps.Map(container, options);
-
-      const marker = new kakao.maps.Marker({
-        position: coordinates,
-        map: map,
       });
     </script>
   </body>
