--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1&libraries=services,clusterer,drawing"></script>
     <script>
       // 가정: 주소 불러오기 완료
-      const addresses = ["수원시 장안구 만석로 29", "서울특별시 강남구 천천동 123"];
+      const addresses = ["수원시 장안구 만석로 29", "화성시 동탄기흥로 557"];
 
       const geocoder = new kakao.maps.services.Geocoder();
 
