--- a/index.html
+++ b/index.html
@@ -8,35 +8,45 @@
   </head>
   <body>
     <div id="map" style="width: 100%; height: 100vh"></div>
+    <input type="text" id="addressInput" placeholder="주소 입력" />
+    <button onclick="addMarker()">마커 추가</button>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1&libraries=services,clusterer,drawing"></script>
     <script>
-      // 가정: 주소 불러오기 완료
-      const addresses = ["수원시 장안구 만석로 29", "화성시 동탄기흥로 557"];
-
       const geocoder = new kakao.maps.services.Geocoder();
+      const addresses = [];
 
       // 지도 생성
       var container = document.getElementById("map");
       var options = {
-        center: new kakao.maps.LatLng(37.264264, 127.022262), // 중심 좌표를 임의로 지정
+        center: new kakao.maps.LatLng(37.264264, 127.022262),
         level: 3,
       };
       var map = new kakao.maps.Map(container, options);
 
-      // 각 주소의 좌표를 얻어와서 마커를 생성하여 지도에 추가
-      addresses.forEach(function (address) {
-        geocoder.addressSearch(address, function (result, status) {
-          if (status === kakao.maps.services.Status.OK) {
-            const coordinates = new kakao.maps.LatLng(result[0].y, result[0].x);
+      // 입력받은 주소를 배열에 추가하고 마커 표시
+      function addMarker() {
+        const addressInput = document.getElementById("addressInput");
+        const address = addressInput.value;
 
-            // 마커 추가
-            const marker = new kakao.maps.Marker({
-              position: coordinates,
-              map: map,
-            });
-          }
-        });
-      });
+        if (address.trim() !== "") {
+          addresses.push(address);
+
+          geocoder.addressSearch(address, function (result, status) {
+            if (status === kakao.maps.services.Status.OK) {
+              const coordinates = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+              // 마커 추가
+              const marker = new kakao.maps.Marker({
+                position: coordinates,
+                map: map,
+              });
+            }
+          });
+
+          // 입력 필드 초기화
+          addressInput.value = "";
+        }
+      }
     </script>
   </body>
 </html>
