--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>kakaomap</title>
+    <link rel="stylesheet" href="../common/style/minireset.min.css" />
   </head>
   <body>
     <div id="map" style="width: 100%; height: 100vh"></div>
-    <input type="text" id="addressInput" placeholder="주소 입력" />
-    <button onclick="addMarker()">마커 추가</button>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1&libraries=services,clusterer,drawing"></script>
     <script>
+      // 가정: 공공데이터로부터 받은 JSON 형식의 주소 데이터
+      const addressData = [
+        { address: "수원시 장안구 만석로 29" },
+        { address: "화성시 동탄기흥로 557" },
+        // 추가적인 주소 데이터가 있다면 계속 추가하세요
+      ];
+
       const geocoder = new kakao.maps.services.Geocoder();
-      const addresses = [];
 
       // 지도 생성
       var container = document.getElementById("map");
@@ -22,13 +27,10 @@
       };
       var map = new kakao.maps.Map(container, options);
 
-      // 입력받은 주소를 배열에 추가하고 마커 표시
-      function addMarker() {
-        const addressInput = document.getElementById("addressInput");
-        const address = addressInput.value;
-
-        if (address.trim() !== "") {
-          addresses.push(address);
+      // 주소 데이터를 이용하여 마커를 추가하는 함수
+      function addMarkers() {
+        addressData.forEach(function (data) {
+          const address = data.address;
 
           geocoder.addressSearch(address, function (result, status) {
             if (status === kakao.maps.services.Status.OK) {
@@ -41,11 +43,11 @@
               });
             }
           });
-
-          // 입력 필드 초기화
-          addressInput.value = "";
-        }
+        });
       }
+
+      // 페이지 로딩 시 마커 추가
+      addMarkers();
     </script>
   </body>
 </html>
