--- a/index.html
+++ b/index.html
@@ -1,51 +1,25 @@
-<!-- templates/index.html -->
-
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>kakaomap</title>
-    <link rel="stylesheet" href="../common/style/minireset.min.css" />
+    <title>marathon</title>
+    <link rel="stylesheet" href="./common/minireset.min.css" />
   </head>
   <body>
-    <div id="map" style="width: 100%; height: 100vh"></div>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1&libraries=services,clusterer,drawing"></script>
+    <div class="title">
+      <h1>주소 받아 마커 찍기</h1>
+    </div>
+    <div id="map" style="width: 500px; height: 400px"></div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
     <script>
-        // addressData를 서버에서 전달한 데이터로 초기화
-      const addressData = {{ address_data | tojson | safe }};
+      var container = document.getElementById("map");
+      var options = {
+        center: new kakao.maps.LatLng(33.450701, 126.570667),
+        level: 3,
+      };
 
-        const geocoder = new kakao.maps.services.Geocoder();
-
-        // 지도 생성
-        var container = document.getElementById("map");
-        var options = {
-          center: new kakao.maps.LatLng(37.264264, 127.022262),
-          level: 3,
-        };
-        var map = new kakao.maps.Map(container, options);
-
-        // 주소 데이터를 이용하여 마커를 추가하는 함수
-        function addMarkers() {
-          addressData.forEach(function (data) {
-            const address = data.address;
-
-            geocoder.addressSearch(address, function (result, status) {
-              if (status === kakao.maps.services.Status.OK) {
-                const coordinates = new kakao.maps.LatLng(result[0].y, result[0].x);
-
-                // 마커 추가
-                const marker = new kakao.maps.Marker({
-                  position: coordinates,
-                  map: map,
-                });
-              }
-            });
-          });
-        }
-
-        // 페이지 로딩 시 마커 추가
-        addMarkers();
+      var map = new kakao.maps.Map(container, options);
     </script>
   </body>
 </html>
