--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="title">
       <h1>주소 받아 마커 찍기</h1>
     </div>
-    <div id="map" style="width: 500px; height: 400px"></div>
+    <div id="map" style="width: 100%; height: 80vh"></div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
     <script>
       var container = document.getElementById("map");
