--- a/index.html
+++ b/index.html
@@ -13,13 +13,35 @@
     <div id="map" style="width: 100%; height: 80vh"></div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
     <script>
-      var container = document.getElementById("map");
-      var options = {
-        center: new kakao.maps.LatLng(33.450701, 126.570667),
-        level: 3,
-      };
+      function addMarkerByAddress(address) {
+        // 주소를 좌표로 변환
+        Kakao.Geocoder.addressSearch(address, function (result, status) {
+          if (status === Kakao.maps.services.Status.OK) {
+            var coords = new Kakao.maps.LatLng(result[0].y, result[0].x);
 
-      var map = new kakao.maps.Map(container, options);
+            // 지도에 마커 추가
+            var marker = new Kakao.maps.Marker({
+              map: map,
+              position: coords,
+            });
+
+            // 지도 중심을 마커 위치로 이동
+            map.setCenter(coords);
+          }
+        });
+      }
+
+      // 지도 생성
+      var container = document.getElementById("mapContainer");
+      var options = {
+        center: new Kakao.maps.LatLng(37.566826, 126.9786567), // 초기 지도 중심 좌표
+        level: 3, // 초기 지도 확대 레벨
+      };
+      var map = new Kakao.maps.Map(container, options);
+
+      // 예시: 주소를 받아와서 마커 추가
+      var sampleAddress = "서울특별시 강남구 역삼동 123";
+      addMarkerByAddress(sampleAddress);
     </script>
   </body>
 </html>
