--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>marathon</title>
+    <title>KakaoMap Project</title>
     <link rel="stylesheet" href="./common/minireset.min.css" />
   </head>
   <body>
@@ -11,6 +11,7 @@
       <h1>주소 받아 마커 찍기</h1>
     </div>
     <div id="map" style="width: 100%; height: 80vh"></div>
+
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fbd35a39f3cd75fc9a5b2976f0b07ef1"></script>
     <script>
       function addMarkerByAddress(address) {
